# mini_games

./: .gitmodules  CMakeLists.txt  README.md  readme.md
.github/workflows/: main.yml
15_puzzle/: CMakeLists.txt  README.md
15_puzzle/src/: app.cpp  app.hpp  main.cpp  puzzle_interface.cpp  puzzle_interface.hpp  puzzle_logic.cpp  puzzle_logic.hpp
clicker/: CMakeLists.txt
clicker/src/: app.cpp  app.hpp
letalka/: CMakeLists.txt  readme.md
letalka/src/: app.cpp  app.hpp  ecs_enemies.cpp  ecs_enemies.hpp  ecs_main.cpp  ecs_main.hpp  ecs_player.cpp  ecs_player.hpp  ecs_spawn_enemy.cpp  ecs_spawn_enemy.hpp  ecs_weapons.cpp  entt_wrapped.hpp  global.cpp  global.hpp  world.cpp  world.hpp
letalka/src/objects/: object.cpp  object.hpp
letalka/src/objects/projectiles/: laser.cpp  laser.hpp  plasma.cpp  plasma.hpp  projectile.hpp
letalka/src/objects/spacecrafts/: player.cpp  player.hpp  spacecraft.hpp
letalka/src/objects/spacecrafts/enemies/: drone.cpp  drone.hpp  enemy.cpp  enemy.hpp  fighter.cpp  fighter.hpp  gunship.cpp  gunship.hpp
safe/: CMakeLists.txt
safe/src/: app.cpp  app.hpp
